--- a/MovieStore/Views/Actors/Details.cshtml
+++ b/MovieStore/Views/Actors/Details.cshtml
@@ -44,3 +44,7 @@
 
     </dl>
 </div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
